--- a/templates/app1/base.html
+++ b/templates/app1/base.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="{% static "app1/css/bootstrap.min.css" %}">
 
     <script src="{% static "app1/js/jquery-3.2.0.min.js" %}"></script>
+    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 
     <style>
         @font-face {
