--- a/static/app1/css/style.css
+++ b/static/app1/css/style.css
@@ -304,6 +304,154 @@ Search
 }
 
 /**
+Story Write
+ */
+.ts-story-write.ts-full-screen {
+    position: fixed;
+    top: -5px;
+    left: -5px;
+    right: -5px;
+    bottom: -5px;
+    margin: 0;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: 55;
+}
+
+.ts-full-screen form {
+    max-width: 700px;
+    margin: 100px auto;
+    box-shadow: 0px 5px 50px rgba(0, 0, 0, .3);
+}
+
+.ts-full-screen .ts-story-btn-panel {
+}
+
+.ts-story-write {
+    padding: 0;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, .25);
+    margin: 10px 0 25px;
+    border-radius: 3px;
+    transition: all .5s ease-in-out;
+}
+
+.ts-story-write form {
+    border-top: 7px solid #009688;
+    border-bottom: 7px solid #009688;
+    border-radius: 3px;
+    background: #fff;
+}
+
+.ts-story-text textarea {
+    font-size: 1.1em;
+}
+
+.ts-story-write .form-control {
+    border-radius: 0;
+}
+
+.ts-story-write .input-group-addon {
+    border-radius: 0;
+}
+
+.ts-story-write .btn {
+    border-radius: 0;
+}
+
+.ts-story-write .ts-width-half {
+    width: 50%;
+    float: left;
+}
+
+.ts-story-write .ts-width-one-third {
+    width: 33.33333333%;
+    float: left;
+}
+
+.ts-story-write .ts-story-btn-panel {
+    overflow: auto;
+}
+
+label[for="image_uploads"] {
+    padding: 7px;
+    margin: 0;
+    font-weight: normal;
+    border: 1px solid #ccc;
+    float: left;
+    width: 100%;
+}
+
+.ts-story-img-preview {
+    border: 1px solid #ccc;
+}
+
+.ts-story-img-preview img {
+    height: 50px;
+    width: 50px;
+    display: inline-block;
+    margin: 3px;
+}
+
+.ts-story-img-preview img:first-child {
+    /*margin: 0;*/
+}
+
+input[type=submit] {
+    font-weight: bold;
+}
+
+.ts-story-write .ts-btn-left {
+    float: left;
+}
+
+.ts-story-write .ts-btn-right {
+    float: right;
+}
+
+.ts-story-optionals-btn .btn:hover, .ts-story-optionals-btn .btn:focus,
+.ts-story-optionals-btn .btn.focus {
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.125);
+    background-color: #f5f5f5;
+    border-color: #bbb;
+}
+
+.ts-story-optionals-btn .btn:active, .ts-story-optionals-btn .btn.active {
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.125);
+    background-color: #eee;
+    border-color: #bbb;
+}
+
+.ts-story-write .ts-btn-enabled {
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.125);
+    background-color: #eee;
+    border-color: #bbb;
+}
+
+.ts-story-write .ts-btn-enabled:hover {
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.125);
+    background-color: #e5e5e5;
+    border-color: #bbb;
+}
+
+.ts-autocomplete-list {
+    position: absolute;
+    z-index: 99;
+    top: 33px;
+    background: #fff;
+    border: 1px solid #ddd;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .15);
+}
+
+.ts-autocomplete-list p {
+    margin: 0;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.ts-autocomplete-list p:hover {
+    background-color: #eee;
+}
+
+/**
  * Common type style
  */
 
@@ -691,8 +839,6 @@ Utility Size class
     margin-top: 30px;
     margin-bottom: 30px;
 }
-
-
 
 /**
  * Style for big screens ;)
